Fixed header size on mobile and button sizes.

--- a/style.sass
+++ b/style.sass
@@ -138,6 +138,8 @@ body
 
 .main-cta
     +mainCta 
+
+.last-button
     @media screen and (max-width: $lgmobile)
         width: 90vw
 
@@ -512,6 +514,7 @@ h2
     word-spacing: -4px
     @media screen and ( max-width: $lgmobile )
         margin-left: 2.5vw
+        font-size: 1.5em
 
 .technologies-header
     +source-code
